# ascii-3d-terminal-demo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
shaders/: ascii_edges.wgsl  ascii_final.wgsl  ascii_plain.wgsl  cube.wgsl  dog_edges.wgsl  edge_detect.wgsl  gaussian_blur.wgsl  luminance.wgsl  skybox.wgsl  sobel_direction.wgsl  sobel_edges.wgsl
src/: terminal_main.rs
src/config/: mod.rs  state.rs  ui.rs
src/gpu/: headless.rs  mod.rs  pipeline.rs
src/model/: loader.rs  mod.rs
src/terminal/: mod.rs  output.rs
