[package]
name = "ascii-3d-terminal-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ascii-3d"
path = "src/terminal_main.rs"

[dependencies]
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
crossterm = "0.28"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tobj = "4.0"
gltf = "1.4"
ratatui = "0.29"
image = "0.25"
arboard = "3.4"

[profile.release]
opt-level = 3
lto = true
